# Zankyou

./: Cargo.toml  NOTICE  flake.nix
src/: Cargo.toml  interface.rs  main.rs
src/audio/: Cargo.toml  bass.sf2  mod.rs
src/audio/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/domain/: mod.rs  notes.rs  random.rs  state.rs
src/core/src/interfaces/: audio.rs  mod.rs  ui.rs
src/core/src/use_cases/: menu.rs  mod.rs
src/core/src/use_cases/game_modes/: mod.rs
src/logic/: mod.rs
src/src/: main.rs
src/ui/: Cargo.toml
src/ui/src/: lib.rs
src/ui/src/widgets/: mod.rs
src/ui/src/widgets/config/: mod.rs
src/ui/src/widgets/game/: events.rs  mod.rs
src/ui/src/widgets/icon/: mod.rs
src/ui/src/widgets/menu/: events.rs  mod.rs
