[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
core.path = "../core"
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
futures = "0.3"
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
textwrap = "0.16" 
tui-textarea = "0.7"
gag = "1.0"
